feat: add base routing

--- a/app/brewery/Views/Shared/_Layout.cshtml
+++ b/app/brewery/Views/Shared/_Layout.cshtml
@@ -21,9 +21,12 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
-                    <li>@Html.ActionLink("О программе", "About", "Home")</li>
-                    <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Food menu", "Index", "Food")</li>
+                    <li>@Html.ActionLink("Beer menu", "Index", "Beer")</li>
+                    <li>@Html.ActionLink("Events", "Index", "Events")</li>
+                    <li>@Html.ActionLink("Gallery", "Index", "Gallery")</li>
+                    <li>@Html.ActionLink("About", "Index", "About")</li>
                 </ul>
             </div>
         </div>
